--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <img src="assets/imgs/fav.svg" alt="logo">
                     </a>
                     <div class="copy">
-                        <p>Copyright © 2023 All Gymat rights reserved</p>
+                        <p>Copyright © 2023 Gymat All rights reserved</p>
                     </div>
                     <ul class="social">
                         <li>
